--- a/src/app/pages/agentes/agentes.component.html
+++ b/src/app/pages/agentes/agentes.component.html
@@ -1,3 +1,15 @@
+<swal
+  #deletarSwal
+  title="Apagar Agente"
+  [showCancelButton]="true"
+  [confirmButtonClass]="'btn btn-fill btn-success'"
+  [confirmButtonText]="'Sim'"
+  [cancelButtonText]="'Não'"
+>
+<div *swalPartial="swalTargets.content">
+    Tem certeza de que deseja apagar este agente?
+</div>
+</swal>
 <div class="main-content">
   <div class="container-fluid">
     <div class="row">
@@ -5,86 +17,67 @@
         <div class="card">
           <div class="header">
             <h4 class="title pull-left">Agentes</h4>
-            <a [routerLink]="'adicionar/'">
-              <button class="btn btn-success btn-fill pull-right">
-                <span><i class="pe-7s-add-user"></i></span>
-                <span>Cadastrar Agente</span>
-              </button>
-            </a>
+            <div class="pull-right">
+              <a [routerLink]="'inativos/'" *ngIf="!inativo">
+                <button class="btn btn-primary btn-fill">
+                    <span><i class="pe-7s-users"></i></span>
+                    <span>Inativos</span>
+                  </button>
+              </a>
+              <a [routerLink]="'/admin/agentes/'" *ngIf="inativo">
+                <button class="btn btn-primary btn-fill">
+                    <span><i class="pe-7s-users"></i></span>
+                    <span>Ativos</span>
+                  </button>
+              </a>
+              <a [routerLink]="'adicionar/'" >
+                <button class="btn btn-success btn-fill">
+                  <span><i class="pe-7s-add-user"></i></span>
+                  <span>Cadastrar Agente</span>
+                </button>
+              </a>
+            </div>
           </div>
           <div class="content table-responsive ">
-            <ngx-spinner
-              bdColor="rgba(0,0,0,0.0)"
-              size="medium"
-              color="#3498db"
-              type="ball-clip-rotate"
-            >
+            <ngx-spinner bdColor="rgba(0,0,0,0.0)" size="medium" color="#3498db" type="ball-clip-rotate">
             </ngx-spinner>
             <div class="row" *ngIf="loaded">
               <div class="col-md-12 filtros">
                 <div>
                   <form class="form-inline" [formGroup]="filtroGroup">
-                    <div class="form-group">
-                      <label for="situacao">Situação: </label>
-                      <select
-                        id="situacao"
-                        class="form-control"
-                        formControlName="situacao"
-                      >
-                        <option value="todos" selected="true">Todos</option>
-                        <option value="ativos">Ativos</option>
-                        <option value="inativos">Inativos</option>
-                      </select>
-                    </div>
+
                     <div class="form-group">
                       <label for="estado">Estado: </label>
-                      <select
-                        name="estado"
-                        id="estado"
-                        class="form-control"
-                        formControlName="estado"
-                      >
-                        <option value="selecione" disabled selected
-                          >Selecione um estado</option
-                        >
+                      <select name="estado" id="estado" class="form-control" formControlName="estado">
+                        <option value="selecione" disabled selected>Selecione um estado</option>
                         <option [ngValue]="{ nome: 'todos' }">Todos</option>
-                        <option
-                          *ngFor="let estado of estados"
-                          [ngValue]="estado"
-                        >
-                          {{ estado.sigla + "-" + estado.nome }}</option
-                        >
+                        <option *ngFor="let estado of estados" [ngValue]="estado">
+                          {{ estado.sigla + "-" + estado.nome }}</option>
                       </select>
                     </div>
 
                     <div class="form-group">
                       <label for="cidade">Cidade: </label>
-                      <select
-                        name="cidade"
-                        id="cidade"
-                        class="form-control"
-                        formControlName="cidade"
-                      >
+                      <select name="cidade" id="cidade" class="form-control" formControlName="cidade">
                         <option value="selecione" disabled selected>{{
                           cidadeOpcao
                         }}</option>
-                        <option
-                          *ngFor="let cidade of cidades"
-                          [ngValue]="cidade"
-                        >
-                          {{ cidade.nome }}</option
-                        >
+                        <option *ngFor="let cidade of cidades" [ngValue]="cidade">
+                          {{ cidade.nome }}</option>
                       </select>
                     </div>
                     <div class="form-group">
-                      <label for="pesquisar">Nome:</label>
-                      <input
-                        class="form-control"
-                        id="pesquisar"
-                        name="pesquisar"
-                        placeholder="Pesquisar"
-                        formControlName="pesquisa"
-                      />
+                      <label for="filtro">Filtro:</label>
+
+                      <select name="filtro" id="filtro" class="form-control" formControlName="filtro">
+                        <option value="nome" selected>Nome</option>
+                        <option value="cpf">CPF</option>
+                      </select>
+                    </div>
+                    <div class="form-group">
+                      <label for="pesquisar">Pesquisa:</label>
+                      <input class="form-control" id="pesquisar" name="pesquisar" placeholder="Pesquisar"
+                        formControlName="pesquisa" />
                     </div>
                   </form>
                 </div>
@@ -107,13 +100,13 @@
                   <td>{{ agente.telefone }}</td>
                   <td>
                     <a [routerLink]="['editar/', agente.id]" name="editar">
-                      <button
-                        class="btn btn-primary btn-fill"
-                        name="editar"
-                        aria-label="editar"
-                      >
-                        <i class="pe-7s-pen"></i></button
-                    ></a>
+                      <button class="btn btn-primary btn-fill" name="editar" aria-label="editar">
+                        <i class="pe-7s-pen"></i></button></a>
+                    <a (click)="abrirModal(agente.id)" name="apagar" *ngIf="inativo">
+                      <button class="btn btn-danger btn-fill" name="apagar" aria-label="apagar">
+                        <i class="pe-7s-trash"></i>
+                      </button>
+                    </a>
                   </td>
                 </tr>
               </tbody>
