--- a/src/app/pages/clientes/clientes.component.html
+++ b/src/app/pages/clientes/clientes.component.html
@@ -15,9 +15,9 @@
     </thead>
     <tbody>
       <tr *ngFor="let compra of comprasCliente">
-        <td>{{compra.procedimento.nome}}</td>
-        <td>R$ {{compra.procedimento.valor}}</td>
-        <td>{{compra.dataCompra}}</td>
+        <td>{{ compra.procedimento.nome }}</td>
+        <td>R$ {{ compra.procedimento.valor }}</td>
+        <td>{{ compra.dataCompra }}</td>
       </tr>
     </tbody>
   </table>
@@ -33,86 +33,109 @@
           </div>
           <div class="content table-responsive">
             <div>
-              <ngx-spinner bdColor="rgba(0,0,0,0.0)" size="medium" color="#3498db" type="ball-clip-rotate"></ngx-spinner>
+              <ngx-spinner
+                bdColor="rgba(0,0,0,0.0)"
+                size="medium"
+                color="#3498db"
+                type="ball-clip-rotate"
+              >
+              </ngx-spinner>
             </div>
             <div class="row">
               <div class="col-md-12 filtros" *ngIf="loaded">
                 <form class="form-inline" [formGroup]="filtroGroup">
                   <div class="form-group">
-                      <label for="estado">Estado: </label>
-                      <select
-                            name="estado"
-                            id="estado"
-                            class="form-control"
-                            formControlName="estado"
-                          >
-                            <option value="selecione" disabled selected
-                              >Selecione um estado</option
-                            >
-                            <option [ngValue]="{ nome: 'todos' }">Todos</option>
-                            <option
-                              *ngFor="let estado of estados"
-                              [ngValue]="estado"
-                            >
-                              {{ estado.sigla + "-" + estado.nome }}</option
-                            >
-                          </select>
-                  </div>
-                  <div class="form-group">
-                      <label for="cidade">Cidade: </label>
-                      <select
-                        name="cidade"
-                        id="cidade"
-                        class="form-control"
-                        formControlName="cidade"
+                    <label for="estado">Estado: </label>
+                    <select
+                      name="estado"
+                      id="estado"
+                      class="form-control"
+                      formControlName="estado"
+                    >
+                      <option value="selecione" disabled selected
+                        >Selecione um estado</option
                       >
-                        <option value="selecione" disabled selected>{{
-                          cidadeOpcao
-                        }}</option>
-                        <option
-                          *ngFor="let cidade of cidades"
-                          [ngValue]="cidade"
-                        >
-                          {{ cidade.nome }}</option
-                        >
-                      </select>
+                      <option [ngValue]="{ nome: 'todos' }">Todos</option>
+                      <option *ngFor="let estado of estados" [ngValue]="estado">
+                        {{ estado.sigla + "-" + estado.nome }}</option
+                      >
+                    </select>
                   </div>
                   <div class="form-group">
-                      <label for="pesquisar">Nome:</label>
-                      <input
-                        class="form-control"
-                        id="pesquisar"
-                        name="pesquisar"
-                        placeholder="Pesquisar"
-                        formControlName="pesquisa"
-                      />
-                    </div>
+                    <label for="cidade">Cidade: </label>
+                    <select
+                      name="cidade"
+                      id="cidade"
+                      class="form-control"
+                      formControlName="cidade"
+                    >
+                      <option value="selecione" disabled selected>{{
+                        cidadeOpcao
+                      }}</option>
+                      <option *ngFor="let cidade of cidades" [ngValue]="cidade">
+                        {{ cidade.nome }}</option
+                      >
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <label for="tipo">Filtro:</label>
+                    <select
+                      name="tipo"
+                      id="tipo"
+                      class="form-control"
+                      formControlName="filtro"
+                    >
+                      <option value="nome" selected>Nome</option>
+                      <option value="cpf">CPF</option>
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <label for="pesquisar">Pesquisa:</label>
+                    <input
+                      class="form-control"
+                      id="pesquisar"
+                      name="pesquisar"
+                      placeholder="Pesquisar"
+                      formControlName="pesquisa"
+                    />
+                  </div>
                 </form>
               </div>
             </div>
             <div class="row" *ngIf="loaded">
               <div class="col-md-12">
-                  <table class="table table-hover table-stripped">
-                      <thead>
-                        <tr>
-                          <th>Nome</th>
-                          <th>Estado</th>
-                          <th>Cidade</th>
-                          <th>Data de Nascimento</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr *ngFor="let cliente of filtros" (click)="historico(cliente)">
-                          <td>{{cliente.nome}}</td>
-                          <td>{{cliente.estado}}</td>
-                          <td>{{cliente.cidade}}</td>
-                          <td>{{cliente.data_nascimento}}</td>
-                        </tr>
-                      </tbody>
-                    </table>
+                <table class="table table-hover table-stripped">
+                  <thead>
+                    <tr>
+                      <th>Nome</th>
+                      <th>Cidade</th>
+                      <th>Data de Nascimento</th>
+                      <th>CPF</th>
+                      <th>Ações</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr
+                      *ngFor="let cliente of filtros"
+                      (click)="historico(cliente)"
+                    >
+                      <td>{{ cliente.nome }}</td>
+                      
+                      <td>{{ cliente.cidade }}</td>
+                      <td>{{ cliente.data_nascimento }}</td>
+                      <td>{{ cliente.cpf }}</td>
+                      <td>
+                        <a (click)="abrirEdicao(cliente.id); $event.stopPropagation()">
+                          <button class="btn btn-primary btn-fill">
+                            <i class="pe-7s-pen"></i>
+                          </button>
+                        </a>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
               </div>
             </div>
-            
           </div>
         </div>
       </div>
