--- a/src/app/pages/cadastrar-agente/cadastrar-agente.component.html
+++ b/src/app/pages/cadastrar-agente/cadastrar-agente.component.html
@@ -116,7 +116,7 @@
                   </div>
                 </div>
               </div>
-              <div class="row">
+              <div class="row"  *ngIf="!edit">
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="password">Senha</label>
